--- a/index.html
+++ b/index.html
@@ -68,23 +68,16 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .about-box-content .about-avatar{
   width:140px;
   height:140px;
-  padding: var(--about-avatar-outline-width);
-  border-radius:2px;
-  border: var(--about-avatar-outline-width) solid var(--about-avatar-outline-color);
-  background-color: transparent;
   box-sizing: border-box;
-}
+  border: var(--about-avatar-outline-width) solid var(--about-avatar-outline-color);
+  border-radius: 2px;
 
-.about-box-content .about-avatar::before{
-  content:"";
-  display:block;
-  width:100%;
-  height:100%;
-  background-image: inherit;
   background-size: cover;
   background-position: center;
-}
+  background-repeat: no-repeat;
 
+  background-clip: padding-box;
+}
 .about-box-content .about-text{flex:1;color:#e5e7eb;}
 .about-box-content .about-text div{margin-bottom:4px;}
 .about-text > div {display: grid;grid-template-columns: 50px auto;gap: 4px;align-items: start;}
