--- a/index.html
+++ b/index.html
@@ -78,6 +78,24 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 
   background-clip: padding-box;
 }
+.about-avatar-wrapper {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%; /* bisa disesuaikan */
+  padding: var(--about-avatar-outline-width);
+  background: conic-gradient(var(--about-avatar-outline-color), #f87171, var(--about-avatar-outline-color));
+  margin-right: 20px; /* jarak ke teks */
+  box-sizing: border-box;
+  flex-shrink: 0;
+}
+.about-avatar {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-image: var(--about-avatar-image);
+  background-size: cover;
+  background-position: center;
+}
 .about-box-content .about-text{flex:1;color:#e5e7eb;}
 .about-box-content .about-text div{margin-bottom:4px;}
 .about-text > div {display: grid;grid-template-columns: 50px auto;gap: 4px;align-items: start;}
@@ -118,7 +136,8 @@ footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
 <!-- OVERLAY BOXES -->
 <div class="paper-box" id="aboutBox"><div class="close-trigger"></div>
   <div class="box-content about-box-content">
-    <div class="about-avatar"></div>
+    <div class="about-avatar-wrapper">
+    <div class="about-avatar">
     <div class="about-text">
       <div class="about-name"></div>
       <div class="about-race"></div>
