--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ const CONFIG = {
   aboutAvatar:"https://github.com/Foruxy/Foruxy.github.io/blob/main/assets/images/Avatar2.png?raw=true",
   aboutName:"Foruxy Puppetaru",
   aboutRace:"Silver Catfox",
-  aboutBio:"Hawrru~! I'm Foruxy, the Silver Catfox!\nI create Discord servers for VTubers, manage VTuber communities, and moderate YouTube channels.\nI also support as a VTuber Advisor, Counselor, and Helper.\nSince February 2025, I’ve been dedicated to helping VTubers grow their communities with creativity and care.",
+  aboutBio:"Hawrru~! I'm Foruxy, the Silver Catfox!\nI help VTubers grow their communities by creating Discord servers, managing communities, and moderating YouTube channels.\nAlso an Advisor, Counselor, and Helper—guiding VTubers with creativity and care since February 2025.,
   links:[{label:"👤 About Me",url:"#about"},{label:"💼 My Work",url:"#work"},{label:"🌐 Social",url:"#social"}],
   myWork:[
     {image:"https://cdn.discordapp.com/icons/1391655093920727040/aff24dcc07ba0d7913693c536696ee31.png",name:"Yasei Pyon’s Zoological Society",owner:"Yasei Pyon",date:"07 July 2025",status:"Partner"},
