--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   --mywork-image-outline-width:2px;
   --mywork-border-color: #8a898c;
   --mywork-box-outline-width: 2px;
-  --mywork-color: #4b38f8;
+  --mywork-color: #5865F2;
 }
 /* GLOBAL FONT */
 *, body, .container, .paper-box {box-sizing: border-box;font-family: var(--font-body);cursor: none !important;margin: 0;padding: 0;}
