--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .about-box-content .about-text div{margin-bottom:4px;}
 .about-text > div {display: grid;grid-template-columns: 50px auto;gap: 4px;align-items: start;}
 .about-name::before,.about-race::before,.about-bio::before{font-family: var(--font-title);font-weight: normal;font-size: 1.2rem;}
-.about-name::before{content: "Nama: ";}.about-race::before{content: "Race: ";}.about-bio::before{content:"Bio: ";}
+.about-name::before{content: "Name: ";}.about-race::before{content: "Race: ";}.about-bio::before{content:"Bio: ";}
 .bio-description{font-size:.9rem;line-height:1.4;color:#e5e7eb;margin-top:4px;text-align:left;}
 .bio-description .about-bio p {font-size:.8rem;}
 @keyframes slowBlink {0%{opacity:1;}50%{opacity:.4;}100%{opacity:1;}}
