--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ const CONFIG = {
   myWork:[
     {image:"https://cdn.discordapp.com/icons/1391655093920727040/aff24dcc07ba0d7913693c536696ee31.png",name:"Yasei Pyon’s Zoological Society",owner:"Yasei Pyon",date:"07 July 2025",status:"Partner"},
     {image:"https://cdn.discordapp.com/icons/1431225172614054000/e19f0c8cbf37b33ccab1ca9b58a7f0b9.png",name:"Hidden Peak ❄",owner:"Eseuri Krasu",date:"24 October 2025",status:"Partner"},
-    {image:"https://cdn.discordapp.com/icons/1416027689554411636/c9379598ef7930896143ec33a8e8b4e3.png",name:"World Of Usagi🐰",owner:"Firany Usami",date:"12 September 2025",status:"Partner"},
+    {image:"https://cdn.discordapp.com/icons/1416027689554411636/5dad690a13476605b2c2ca9ac9c167d7.png",name:"Heaven Of Viranich 🌼",owner:"Viranich",date:"12 September 2025",status:"Partner"},
     {image:"https://cdn.discordapp.com/icons/1449052821193232419/30f98d369cedebe200d852fce8323e63.png",name:"Kira's Aquarium🐟",owner:"Kira Maguro",date:"12 Desember 2025",status:"Partner"},
     {image:"https://cdn.discordapp.com/icons/1437694080497877104/51b342307e2971b2c9a642166d6858ff.png",name:"(Private) Clanen's Fluffytopia🍭",owner:"Clara Nefia",date:"11 Juni 2025",status:"Finish"},
     {image:"https://cdn.discordapp.com/icons/1449407408081342526/51e73f36e5b8c60814ad27e1ddb9ab7e.png",name:"Amaryn Pastry Shop🎂",owner:"Amaryn s.",date:"21 Agustus 2025",status:"Partner"},
